DeveloperOrg/force-app/main/default/objects/students__c/students__c.object-meta.xml
<CustomObject>
    <label>students</label>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>studentss</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>