DeveloperOrg/force-app/main/default/objects/students__c/fields/Auto_number__c.field-meta.xml
<CustomField>
    <fullName>Auto_number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Auto number</label>
    <type>AutoNumber</type>
</CustomField>