DeveloperOrg/force-app/main/default/objects/students__c/fields/online_class__c.field-meta.xml
<CustomField>
    <fullName>online_class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>online class</label>
    <type>Checkbox</type>
</CustomField>