DeveloperOrg/force-app/main/default/objects/students__c/fields/student_mark__c.field-meta.xml
<CustomField>
    <fullName>student_mark__c</fullName>
    <label>student mark</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>