DeveloperOrg/force-app/main/default/objects/students__c/fields/subject__c.field-meta.xml
<CustomField>
    <fullName>subject__c</fullName>
    <label>subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>science</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>chemistry</fullName>
            </value>
            <value>
                <fullName>physics</fullName>
            </value>
            <value>
                <fullName>Bioligy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>