DeveloperOrg/force-app/main/default/objects/students__c/fields/teacher__c.field-meta.xml
<CustomField>
    <fullName>teacher__c</fullName>
    <label>teacher</label>
    <referenceTo>teacher__c</referenceTo>
    <relationshipLabel>studentss</relationshipLabel>
    <relationshipName>studentss</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>