DeveloperOrg/force-app/main/default/objects/students__c/fields/tution__c.field-meta.xml
<CustomField>
    <fullName>tution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>tution</label>
    <type>Checkbox</type>
</CustomField>