DeveloperOrg/force-app/main/default/objects/students__c/recordTypes/Evening.recordType-meta.xml
<RecordType>
    <fullName>Evening</fullName>
    <active>true</active>
    <label>Evening</label>
</RecordType>