DeveloperOrg/force-app/main/default/objects/students__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>date__c</columns>
    <columns>teacher__c</columns>
    <columns>subject__c</columns>
    <columns>online_class__c</columns>
    <columns>tution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>